--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,39 @@
 {
     "version": 2,
     "builds": [
-        {
-            "src": "app.py",
-            "use": "@vercel/python"
-        },
-        {
-            "src": "*.html",
-            "use": "@vercel/static"
-        },
-        {
-            "src": "*.js",
-            "use": "@vercel/static"
+      {
+        "src": "wsgi.py",
+        "use": "@vercel/python",
+        "config": {
+          "maxLambdaSize": "15mb",
+          "runtime": "python3.11"
         }
+      },
+      {
+        "src": "static/**",
+        "use": "@vercel/static"
+      },
+      {
+        "src": "*.html",
+        "use": "@vercel/static"
+      }
     ],
     "routes": [
-        {
-            "src": "/api/(.*)",
-            "dest": "app.py"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/$1"
-        }
+      {
+        "src": "/static/(.*)",
+        "dest": "/static/$1"
+      },
+      {
+        "src": "/(.*)\\.js",
+        "dest": "/static/$1.js"
+      },
+      {
+        "src": "/api/(.*)",
+        "dest": "/wsgi.py"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/$1"
+      }
     ]
-}
+  }
