--- a/vercel.json
+++ b/vercel.json
@@ -1,39 +1,15 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "wsgi.py",
-        "use": "@vercel/python",
-        "config": {
-          "maxLambdaSize": "15mb",
-          "runtime": "python3.11"
-        }
-      },
-      {
-        "src": "static/**",
-        "use": "@vercel/static"
-      },
-      {
-        "src": "*.html",
-        "use": "@vercel/static"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/static/(.*)",
-        "dest": "/static/$1"
-      },
-      {
-        "src": "/(.*)\\.js",
-        "dest": "/static/$1.js"
-      },
-      {
-        "src": "/api/(.*)",
-        "dest": "/wsgi.py"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "/$1"
-      }
-    ]
-  }
+  "version": 2,
+  "builds": [
+    { "src": "*.html", "use": "@vercel/static" },
+    { "src": "static/**", "use": "@vercel/static" },
+    { "src": "*.js", "use": "@vercel/static" },
+    { "src": "*.py", "use": "@vercel/static" },
+    { "src": "data/**/*.json", "use": "@vercel/static" },
+    { "src": "data/.gitkeep", "use": "@vercel/static" },
+    { "src": "vercel.json", "use": "@vercel/static" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/$1" }
+  ]
+}
